[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verl-mint"
version = "0.1.0"
description = "Minimal backend abstractions and router for verl-mint"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
qwen-sft = [
  "torch>=2.3",
  "transformers>=4.44",
  "peft>=0.12",
  "accelerate>=0.33",
]
verl = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
