[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "verl-mint"
version = "0.1.2"
description = "Open MinT training runtime on veRL"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Mind Lab" },
]
maintainers = [
  { name = "Mind Lab" },
]
keywords = ["mint", "verl", "rlhf", "sft", "grpo", "training-runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["fastapi>=0.110"]

[project.urls]
Homepage = "https://github.com/verl-project/verl-mint"
Repository = "https://github.com/verl-project/verl-mint"
Documentation = "https://github.com/MindLab-Research/mint-doc"
Issues = "https://github.com/verl-project/verl-mint/issues"
Changelog = "https://github.com/verl-project/verl-mint/blob/main/CHANGELOG.md"

[project.scripts]
verl-mint = "verl_mint.cli:main"

[project.optional-dependencies]
client = [
  "mindlab-toolkit @ git+https://github.com/MindLab-Research/mindlab-toolkit.git",
]
dev = [
  "build>=1.2",
  "httpx>=0.27",
  "pytest>=8.0",
  "uvicorn>=0.29",
]
test = [
  "httpx>=0.27",
  "pytest>=8.0",
]
server = [
  "uvicorn>=0.29",
]
smoke = [
  "mindlab-toolkit @ git+https://github.com/MindLab-Research/mindlab-toolkit.git",
  "uvicorn>=0.29",
  "torch>=2.3,<3",
  "transformers>=4.44,<6",
  "peft>=0.12,<1",
  "accelerate>=0.33,<2",
]
qwen-sft = [
  "torch>=2.3,<3",
  "transformers>=4.44,<6",
  "peft>=0.12,<1",
  "accelerate>=0.33,<2",
]
ray = [
  "ray[default]>=2.46.0,<3",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
